disable page zooming; make sidebar take less space; enforce minimum height to ensure all sidebar content always visible

--- a/app/stylesheets/_components.scss
+++ b/app/stylesheets/_components.scss
@@ -130,6 +130,20 @@ body {
     -webkit-app-region: no-drag;
 }
 
+.horizontal-sidebar-btns {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0;
+	.btn {
+		width: 130px;
+	}
+}
+
+.radio-btn-container {
+	margin-bottom: 4px !important;
+}
+
 .panel-action-locked {
 	padding-top: 10px;
 	color: red;
@@ -707,6 +721,11 @@ body {
 		}
 	}
 }
+
+.sidebar__section {
+	padding: 10px;
+}
+
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
 	background: $brand-primary;
